--- a/app.json
+++ b/app.json
@@ -1,29 +1,30 @@
 {
-  "pages":[
+  "pages": [
     "pages/index/index",
     "pages/change/change",
     "pages/history/history"
   ],
-  "window":{
-    "navigationBarBackgroundColor":"#FF7F50",
-    "navigationBarTextStyle":"black",
-    "navigationBarTitleText":"翻译小工具",
-    "backgroundTextStyle":"light"
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#1c1b21",
+    "navigationBarTitleText": "翻译小工具",
+    "navigationBarTextStyle": "#fff",
+    "backgroundColor": "red"
   },
-  "tabBar":{
-    "list":[
+  "tabBar": {
+    "borderStyle": "white",
+    "position": "top",
+    "color": "#595959",
+    "selectedColor": "#1c1b21",
+    "list": [
       {
-        "pagePath":"pages/index/index",
-        "text":"翻译"
+        "pagePath": "pages/index/index",
+        "text": "翻译"
       },
       {
         "pagePath": "pages/history/history",
-        "text": "历史记录"
+        "text": "历史"
       }
-    ],
-    "backgroundColor":"#EEC900",
-    "color":"black",
-    "position":"top",
-    "selectedColor":"white"
+    ]
   }
 }
