--- a/project.config.json
+++ b/project.config.json
@@ -1,8 +1,5 @@
 {
-	"description": "项目配置文件",
-	"packOptions": {
-		"ignore": []
-	},
+	"description": "项目配置文件。",
 	"setting": {
 		"urlCheck": true,
 		"es6": true,
@@ -12,12 +9,9 @@
 		"autoAudits": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
+	"libVersion": "1.0.0",
 	"appid": "wx2e7d0448d987c600",
-	"projectname": "weixinTest",
-	"debugOptions": {
-		"hidedInDevtools": []
-	},
+	"projectname": "庄小威的作品",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
